--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,17 +1,26 @@
 <div ng-controller="mainCtrl" class="base">
+  <div class="top">
+  </div>
+
+  <div class="title">
+    <h1 class="title-words">repoFinder!</h1>
+    <h4 class="subtitle-words">Search repositories among Github, Bitbucket, Gitorious, etc.</h3>
+  </div>
+
+  <div class="search">
     <div class="form-inline inline">
-      <input class="form-control searchInput" name="search" ng-model="keyword"/>
+      <input class="form-control searchInput" name="search" ng-model="keyword" placeholder="Hello Git!"/>&nbsp;
       <button type="button" class="btn btn-default" ng-click="doSearch()">Search</button>
     </div>
+  </div>
 
-    <div class="content">
-      <div ng-show="resShow">{{count}} results</div>
-      <div ng-repeat="res in searchRes">
-        <div ng-class-odd="'info odd'" ng-class-even="'info even'">
-          <img class="avatar img-thumbnail" ng-src="{{res.avatar}}">
-            <a class="link" ng-href="{{res.url}}">{{res.name}}</a>
-        </div>
+  <div class="content">
+    <div ng-show="resShow">{{count}} results</div>
+    <div ng-repeat="res in searchRes">
+      <div ng-class-odd="'info odd'" ng-class-even="'info even'">
+        <img class="avatar img-thumbnail" ng-src="{{res.avatar}}">
+        <a class="link" ng-href="{{res.url}}">{{res.name}}</a>
       </div>
     </div>
-
+  </div>
 </div>
