--- a/app/styles/repoInfo.less
+++ b/app/styles/repoInfo.less
@@ -1,11 +1,11 @@
-@githubColor:        rgba(70,70,70, 0.8);
-@bbColor:            rgba(10,100,220, 0.9);
-@grColor:            rgba(220,50,10, 0.9);
+@githubColor:        rgba(70,70,70, 0.7);
+@bbColor:            rgba(10,100,220, 0.7);
+@grColor:            rgba(220,50,10, 0.7);
 
 .repo {
   margin: 10px;
   width: 350px;
-  height: 200px;
+  height: 180px;
   //background-color: green;
   float: left;
   border: solid 1px rgba(200,200,200,0.5);
@@ -13,6 +13,7 @@
 
 .description {
   overflow: auto;
+  max-height: 80px;
 }
 
 .Github {
@@ -41,3 +42,12 @@ a.link {
   padding-top: 12px;
 }
 
+.repoInfo {
+  padding-left: 50px;
+}
+
+.InfoAndOpts {
+  margin: 0px;
+  margin-bottom: 10px;
+  //background-color: green;
+}
